package order.domain;

public enum OrderStatus {
    COOKING, MEAL, COMPLETION
}

